--- a/tools/renderer/index.html
+++ b/tools/renderer/index.html
@@ -122,6 +122,19 @@
             .attr('stroke', 'black')
             .attr('cx', function(commit) { return 5 + commit.column * xGap + shaMargin; })
             .attr('cy', function(commit, idx) { return 5 + idx * yGap; })
+
+        sg.selectAll('sha')
+          .data(tree)
+          .enter()
+          .append('text')
+          .attr('font-size', 12)
+          .attr('x', function(commit) { return 0; })
+          .attr('y', function(commit, idx) { return 5 + idx * yGap; })
+          .attr('alignment-baseline', 'middle')
+          .attr('font-family', 'Consolas, "Liberation Mono", Menlo, Courier, monospace')
+          .text(function(commit) {
+            return commit.id.substr(0, 7);
+          });
       };
     </script>
   </body>
