--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -216,15 +216,16 @@
         out += 'func ' + testName + '(t *testing.T) {\n';
 
         out += '	// Initial input\n';
+        out += '	inputNodes := make([]InputNode, 0)\n';
         _.each(tree, function(node) {
           var p = _.map(node.parents, function(el) { return '"' + el + '"'; }).join(',');
-          out += '	inputNodes = append(inputNode{"' + node.id + '", []string{' + p + '}})\n';
+          out += '	inputNodes = append(inputNodes, InputNode{"' + node.id + '", []string{' + p + '}})\n';
         });
 
         out += '\n	out, _ := buildTree(inputNodes, customColors)\n\n';
 
         out += '	// Expected output\n';
-        var expectedColumns = _.pluck(tree, 'column').join(',');
+        var expectedColumns = _.pluck(tree, 'column').join(', ');
         out += '	expectedColumns := []int{' + expectedColumns + '}\n\n';
 
         out += '	expectedPaths := []map[string]Path{\n';
