--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -219,7 +219,7 @@
         out += '	inputNodes := make([]InputNode, 0)\n';
         _.each(tree, function(node) {
           var p = _.map(node.parents, function(el) { return '"' + el + '"'; }).join(',');
-          out += '	inputNodes = append(inputNodes, InputNode{"' + node.id + '", []string{' + p + '}})\n';
+          out += '	inputNodes = append(inputNodes, map[string]interface{}{"id": "' + node.id + '", "parents": []string{' + p + '}})\n';
         });
 
         out += '\n	out, _ := buildTree(inputNodes, customColors)\n\n';
