--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -216,7 +216,7 @@
         out += 'func ' + testName + '(t *testing.T) {\n';
 
         out += '	// Initial input\n';
-        out += '	inputNodes := make([]InputNode, 0)\n';
+        out += '	inputNodes := make([]map[string]interface{}, 0)\n';
         _.each(tree, function(node) {
           var p = _.map(node.parents, function(el) { return '"' + el + '"'; }).join(',');
           out += '	inputNodes = append(inputNodes, map[string]interface{}{"id": "' + node.id + '", "parents": []string{' + p + '}})\n';
