--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -200,6 +200,9 @@
                 if (tree[rowIndex].column != colIndex) {
                   console.log('...CALISS');
                 }
+                if (firstCommit == rowIndex) {
+                  return;
+                }
                 if (firstCommit > rowIndex) {
                   firstCommit = [rowIndex, rowIndex = firstCommit][0]; // swap vars
                 }
