Save/Load structure from localstorage

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -39,6 +39,8 @@
             <button class="btn btn-default" onclick="setMode('commits')"><i class="fa fa-circle"></i></button>
             <button class="btn btn-default" onclick="setMode('links')"><i class="fa fa-share-alt"></i></button>
             <button class="btn btn-default" onclick="btnAddRowClicked()"><i class="fa fa-plus"></i> Add row</button>
+            <button class="btn btn-default" onclick="btnSaveClicked()">Save</button>
+            <button class="btn btn-default" onclick="btnLoadClicked()">Load</button>
             <button class="btn btn-default">Add column</button>
           </div>
           <svg id="tree" class="form-control"></svg>
@@ -78,6 +80,18 @@
 
       var btnAddRowClicked = function() {
         tree.push({id: tree.length.toString(), parents: []});
+        render();
+      };
+
+
+      var btnSaveClicked = function() {
+        localStorage.setItem('tree', JSON.stringify(tree));
+      };
+
+
+      var btnLoadClicked = function() {
+        var savedTree = localStorage.getItem('tree');
+        tree = JSON.parse(savedTree);
         render();
       };
 
