--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -78,7 +78,7 @@
       var tree = [];
 
       var btnAddRowClicked = function() {
-        tree.push({id: tree.length.toString(), parents: []});
+        tree.push({id: tree.length.toString(), parents: [], column: 0});
         render();
       };
 
