--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <h1></h1>
 
       <div class="row">
@@ -27,6 +27,7 @@
       </div>
 
       <div class="row">
+
         <div class="col-sm-4">
           <label>Svg</label>
           <div class="">
@@ -39,6 +40,12 @@
           </div>
           <svg id="tree" class="form-control"></svg>
         </div>
+
+        <div class="col-sm-4">
+          <h2>Infos:</h2>
+          <pre id="code"></pre>
+        </div>
+
         <div class="col-sm-4">
           <div class="row">
             <div class="col-sm-12">
@@ -62,6 +69,7 @@
             </div>
           </div>
         </div>
+
       </div>
 
     </div>
