circles more pale

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -166,7 +166,7 @@
               .attr('r', 5)
               .attr('fill', 'none')
               .attr('stroke', '#ddd')
-              .attr('fill', '#aaa')
+              .attr('fill', '#ddd')
               .attr('cx', function(c) { return c * xGap + xGap; })
               .attr('cy', function(c, i, a) { return a * yGap + yGap })
               .on('mousedown', function() {})
