select node on mousedown

--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -265,6 +265,9 @@
               tree[firstCommit].parents = _.sortBy(tree[firstCommit].parents);
               render();
             }
+          })
+          .on('click', function(node) {
+            selectedNode = node;
           });
 
 
