--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -261,9 +261,7 @@
               firstCommit = [rowIndex, rowIndex = firstCommit][0]; // swap vars
             }
             if (!_.includes(tree[firstCommit].parents, rowIndex)) {
-              tree[firstCommit].parents.push(rowIndex.toString());
-              tree[firstCommit].parents = _.sortBy(tree[firstCommit].parents);
-              render();
+              addPath(rowIndex);
             }
           })
           .on('click', function(node) {
