--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -235,7 +235,9 @@
             })
             .attr('stroke-width', 3)
             .attr('fill', 'none')
-            .attr('stroke', '#5aa1be')
+            .attr('stroke', function(item) {
+              return item[1].color;
+            })
             .on('mousedown', function(item) {
               selectedPath = item;
             })
