--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -77,6 +77,8 @@
       new Clipboard('.copy');
       var mode = 'commits';
       var firstCommit = null;
+      var selectedPath = null;
+      var selectedNode = null;
 
       var setMode = function(modeName) {
         mode = modeName;
@@ -206,16 +208,18 @@
         // Each paths
         var pathsGroup = nodeGroup
           .append('g')
-          .attr('class', 'paths')
-          .selectAll('path')
+          .attr('class', 'paths');
+        pathsGroup
+          .selectAll('g')
           .data(function(node) {
-            return _.map(node.parents, function(item) { return [node, item]; });
+            return _.map(node.parentsPaths, function(pathItem, parentId) { return [node, pathItem, parentId]; });
           })
           .enter()
           .append('path')
             .attr('d', function(item) {
               var node = item[0];
-              var parentId = item[1];
+              var path = item[1];
+              var parentId = item[2];
               var p = tree[parentId];
               var result = [];
               _.each(path.path, function(item) {
