--- a/tools/tools/index.html
+++ b/tools/tools/index.html
@@ -4,6 +4,8 @@
     <title></title>
     <link rel="stylesheet" href="../vendors/bootstrap/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="../vendors/font-awesome-4.4.0/css/font-awesome.min.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="../vendors/angular.min.js"></script>
+    <script src="../vendors/angular-sanitize.min.js"></script>
     <script src="../vendors/d3.min.js"></script>
     <script src="../vendors/lodash.min.js"></script>
     <script src="../vendors/clipboard.min.js"></script>
